--- a/www/index.html
+++ b/www/index.html
@@ -33,16 +33,26 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>Parted Page Mobile</title>
+        <script src="js/slider.js"></script>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+    <!--<div class="app">-->
+        <!--<h1>Apache Cordova</h1>-->
+        <!--<div id="deviceready" class="blink">-->
+            <!--<p class="event listening">Connecting to Device</p>-->
+            <!--<p class="event received">Device is Ready</p>-->
+        <!--</div>-->
+    <!--</div>-->
+
+        <div class="body">
+            <header class="header" id="header">header</header>
+            <div class="slider" id="slider">slider</div>
+            <footer class="footer" id="footer">footer</footer>
         </div>
+
+
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
